docs/python/ccxt/static_dependencies/starknet/abi/v2/sub.md
# Keyword Index: python/ccxt/static_dependencies/starknet/abi/v2

## Keywords from this folder

This index aggregates keywords from all files in `python/ccxt/static_dependencies/starknet/abi/v2`.


## A

### `ABI`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `ABI_EBNF`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `Abi`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/model.py

### `AbiParser`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `AbiParsingError`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py


## C

### `CONSTRUCTOR_ENTRY`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/shape.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `Constructor`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/model.py

### `ConstructorAbiEntrySchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `ConstructorDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py

### `ContractAbiEntrySchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py


## D

### `DATA_KIND`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/shape.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `DataclassSupportingEncoder`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py


## E

### `ENUM_ENTRY`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/shape.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `EVENT_ENTRY`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/shape.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `EXCLUDE`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `EnumAbiEntrySchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `EnumDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py

### `EventAbiEntrySchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `EventBaseDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py

### `EventEnum`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/model.py

### `EventEnumAbiEntrySchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `EventEnumDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py

### `EventEnumVariantDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py

### `EventEnumVariantSchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `EventStruct`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/model.py

### `EventStructAbiEntrySchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `EventStructDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py

### `EventStructMemberDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py

### `EventStructMemberSchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py


## F

### `FUNCTION_ENTRY`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/shape.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `Function`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/model.py

### `FunctionAbiEntrySchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `FunctionBaseDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py

### `FunctionBaseSchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `FunctionDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py


## I

### `IDENTIFIER`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `IMPL_ENTRY`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/shape.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `INT`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `INTERFACE_ENTRY`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/shape.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `Impl`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/model.py

### `ImplAbiEntrySchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `ImplDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py

### `Interface`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/model.py

### `InterfaceAbiEntrySchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `InterfaceDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py


## L

### `L1HandlerAbiEntrySchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `L1HandlerDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py

### `L1_HANDLER_ENTRY`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/shape.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `LEVEL`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser.py


## N

### `NESTED_KIND`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/shape.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py


## O

### `ONE`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser.py


## P

### `ParserTransformer`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py


## S

### `STRUCT_ENTRY`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/shape.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser.py
- Constant in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `StructAbiEntrySchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `StructDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py


## T

### `TypeDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py

### `TypeSchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py

### `TypedParameterDict`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/shape.py

### `TypedParameterSchema`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/schemas.py


## Z

### `Z_0`

- Constant in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py


## _

### `__default__`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `__init__`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py
- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `_check_for_cycles`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `_group_by_entry_name`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `_grouped`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `_parse_constructor`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `_parse_event`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `_parse_function`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `_parse_impl`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `_parse_interface`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `_parse_members`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `_parse_structures_and_enums`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `_to_json`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py


## A

### `abi`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/model.py

### `actual_type`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py


## C

### `constructor`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/model.py

### `contains`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py


## D

### `default`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `doesn`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/model.py


## F

### `for`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py


## I

### `it`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py


## P

### `parse`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py
- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py


## T

### `tuple`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type_array`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type_bool`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type_bytes`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type_class_hash`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type_contract_address`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type_felt`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type_identifier`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type_option`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type_parser`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser.py

### `type_span`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type_storage_address`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type_uint`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

### `type_unit`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py


## U

### `under`

- Identifier defined in python/ccxt/static_dependencies/starknet/abi/v2/parser_transformer.py

